@@ -1,29 +1,91 @@
 # Travel Agency Simulator
 
 ## Description
-Travel agencies often struggle with manual management of bookings, agents, customer data, and travel packages, leading to inefficiency and errors. The Travel Agency Simulator is a Java-based application that solves these problems using Data Structures and DBMS concepts. It allows administrators to manage agents, customers, bookings, dynamically create travel packages, and simulate online payment functionality.
+
+Travel agencies often face challenges with **manual management of bookings, agents, customer data, and travel packages**, leading to inefficiency and errors.
+
+**Travel Agency Simulator** is a **Java-based application** that solves these problems using **Data Structures** and **DBMS** concepts. The application allows administrators to efficiently manage agents, customers, bookings, dynamically create travel packages, and simulate online payment functionality.
+
+---
 
 ## Features
-- Admin login and authentication  
-- Add, edit, delete, and view agents  
-- Add, edit, delete, and view customers  
-- Manage bookings efficiently  
-- Dynamically create travel packages  
-- Online payment simulation for bookings  
+
+* **Admin login and authentication**
+* **Agent management:** Add, edit, delete, and view agents
+* **Customer management:** Add, edit, delete, and view customers
+* **Booking management:** Efficiently handle customer bookings
+* **Travel package creation:** Dynamically create and manage travel packages
+* **Online payment simulation:** Simulate payment process for bookings
+
+---
 
 ## Technologies Used
-- Java  
-- Object-Oriented Programming (OOP)  
-- Data Structures (arrays, lists, etc.)  
-- Database Management System (DBMS) for storing records  
-- JavaFX for implemented GUI
+
+* **Java**
+* **Object-Oriented Programming (OOP)**
+* **Data Structures:** Arrays, lists, etc.
+* **Database Management System (DBMS):** Storing records efficiently
+* **JavaFX:** GUI implementation for interactive user experience
+
+---
+
 ## Demo Video
 
-https://youtu.be/irNkkseFjRY
+Watch the project demonstration here: [https://youtu.be/irNkkseFjRY](https://youtu.be/irNkkseFjRY)
+
+---
+## Installation & Running Locally
+
+Follow these steps to run the **Travel Agency Simulator** on your local machine:
+
+1. **Clone the repository:**
+
+```bash
+git clone https://github.com/nimrahpunjwani/travel-agency-simulator.git
+```
+
+2. **Navigate to the project directory:**
+
+```bash
+cd travel-agency-simulator
+```
+
+3. **Open the project in your preferred Java IDE** (e.g., IntelliJ IDEA, Eclipse, NetBeans).
+
+4. **Ensure you have Java JDK 17 or higher installed.**
+
+5. **Build and run the project:**
+
+* If using an IDE, run the `TVASgui` class.
+* If using the command line:
+
+```bash
+compile
+
+javac --module-path "C:\Users\HP\Downloads\openjfx-24.0.1_windows-x64_bin-sdk\javafx-sdk-24.0.1\lib" --add-modules javafx.controls,javafx.fxml -cp ".;C:\Users\HP\Downloads\openjfx-24.0.1_windows-x64_bin-sdk\javafx-sdk-24.0.1\lib\*;C:\Users\HP\Downloads\ojdbc11.jar;C:\Users\HP\Downloads\gson-2.10.1.jar" gui\TVASgui.java
 
 
+run
+java --module-path "C:\Users\HP\Downloads\openjfx-24.0.1_windows-x64_bin-sdk\javafx-sdk-24.0.1\lib" --add-modules javafx.controls,javafx.fxml -cp ".;C:\Users\HP\Downloads\openjfx-24.0.1_windows-x64_bin-sdk\javafx-sdk-24.0.1\lib\*;C:\Users\HP\Downloads\ojdbc11.jar;C:\Users\HP\Downloads\gson-2.10.1.jar" gui.TVASgui
+```
+
+6. **Interact with the application using the GUI.**
+
+* Admin login is required to access management features.
+
+---
+
+## Contributing
+
+Contributions are welcome. You can help by:
+
+* Adding new features or modules
+* Improving UI/UX in JavaFX
+* Optimizing backend logic and database interactions
+
+Please **fork the repository** and submit a **pull request** for review.
+
+---
 
 
-
-
-
+Do you want me to do that?
